--- a/alorithmsJsTs/package.json
+++ b/alorithmsJsTs/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
     "eslint": "^9.25.1",
+    "eslint-plugin-import": "^2.31.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
